--- a/index.html
+++ b/index.html
@@ -6,27 +6,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Vue template</title>
+    <title>Valantic Vue Styleguide</title>
 
     <script>
       window.initialData = {};
     </script>
-    <link
-      rel="stylesheet"
-      href="/src/setup/scss/themes/theme-01.scss"
-    />
     <script
       type="module"
       src="/src/main.ts"
       defer
     ></script>
   </head>
-  <body>
-    <div id="app">
-      <header is="vue:c-header"></header>
-      <div is="vue:l-default"></div>
-      <footer is="vue:c-footer"></footer>
-    </div>
+  <body id="valantic-vue-styleguide">
+    <div id="app"></div>
 
     <noscript>
       <div class="c-no-script">To view this website you need to enable JavaScript.</div>
